# s3-bagit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BAGIT-SPEC.md  OPERATIONS.md  VERIFY-SINGLE-PASS-MULTIHASH.md
src/kopah_bagit/: __init__.py  __main__.py  cli.py  exceptions.py  extract.py  kopah_client.py  log_config.py  s3_url.py  verify.py
src/s3_bagit/: __init__.py  __main__.py  cli.py  config_cmd.py  create_bag.py  exceptions.py  extract.py  issue.py  log_config.py  ls.py  s3_client.py  s3_url.py  verify.py  verify_against.py
tests/: conftest.py  test_cli.py  test_config_cmd.py  test_create_bag.py  test_cross_endpoint.py  test_extract.py  test_kopah_client.py  test_ls.py  test_s3_client.py  test_s3_url.py  test_verify.py  test_verify_against.py
