[project]
name = "s3-bagit"
version = "0.1.0"
description = "BagIt extract and verify against any S3-compatible storage, streaming end-to-end."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "University of Washington Libraries" }]
dependencies = [
    "boto3>=1.35",
    "python-dotenv>=1.0",
    "stream-unzip>=0.0.71",
    "tqdm>=4.67",
]

[project.scripts]
s3-bagit = "s3_bagit.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "moto[s3]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3_bagit"]

[tool.uv]
# Local-only tool: keep everything available after `uv sync` per PYTHON.md §6.
default-groups = ["dev", "test"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ARG",    # flake8-unused-arguments
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except
    "E",      # pycodestyle errors
    "ERA",    # eradicate
    "F",      # pyflakes
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "W",      # pycodestyle warnings
    "PLC",
    "PLE",
    "PLW",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert in tests
    "ARG001",
    "ARG002",
    "S105",
    "S106",
    "S107",    # hardcoded "password" defaults — fixture knobs, not real creds
    "T20",
    "PLW0603",
]
"src/s3_bagit/cli.py" = [
    "T20",     # CLI prints to user
]
"src/s3_bagit/verify.py" = [
    "S324",    # md5/sha1 are legitimate BagIt manifest algorithms
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101", "B324"]  # md5/sha1 are valid BagIt manifest choices

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -ra --tb=short"

[tool.coverage.run]
source = ["src/s3_bagit"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
